# tong-password-management

./: AGENTS.md  AGENT_API.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: agent.rs  api_key.rs  entity.rs  lib.rs  main.rs  resource.rc  resource.res  screen.rs  sqlite_util.rs
src/ui/: api_key_manager.rs  app.rs  mod.rs  taiji.rs
