[package]
name = "jiduobao"
version = "2.0.0"
edition = "2021"
description = "记多宝 - 安全的本地密码管理工具"
authors = ["cherishtong <cherishtong@aliyun.com>"]
license = "MIT"
repository = "https://github.com/yourusername/jiduobao"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
chrono = "0.4"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
once_cell = "1.19"
cli-clipboard = "0.4"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"

# TUI 相关依赖
ratatui = "0.25"
crossterm = "0.27"
dialoguer = "0.11"
console = "0.15"